# goit-pythonweb-hw-10

./: .env.example  README.md  main.py  pyproject.toml
alembic/: env.py
src/api/: contacts.py  users.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  limiter.py  users.py
