[tool.poetry]
name = "goit-pythonweb-hw-08"
version = "0.1.0"
description = ""
authors = ["Artur Prepelytsia <preart81@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.37"
alembic = "^1.14.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.10.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
